[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "postgres", "json"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
toml = "0.8.8"
moka = { version = "0.12.1", features = ["future"] }
